; ModuleID = '/home/carl/AnghaBench/nginx-rtmp-module/dash/extr_ngx_rtmp_mp4.c_ngx_rtmp_mp4_write_audio.c'
source_filename = "/home/carl/AnghaBench/nginx-rtmp-module/dash/extr_ngx_rtmp_mp4.c_ngx_rtmp_mp4_write_audio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64, i64 }

@ngx_rtmp_codec_module = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"mp4a\00", align 1
@NGX_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @ngx_rtmp_mp4_write_audio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_rtmp_mp4_write_audio(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* @ngx_rtmp_codec_module, align 4
  %9 = call %struct.TYPE_3__* @ngx_rtmp_get_module_ctx(i32* %7, i32 %8)
  store %struct.TYPE_3__* %9, %struct.TYPE_3__** %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @ngx_rtmp_mp4_start_box(i32* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @ngx_rtmp_mp4_field_32(i32* %12, i32 0)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @ngx_rtmp_mp4_field_16(i32* %14, i32 0)
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @ngx_rtmp_mp4_field_16(i32* %16, i32 1)
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @ngx_rtmp_mp4_field_32(i32* %18, i32 0)
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @ngx_rtmp_mp4_field_32(i32* %20, i32 0)
  %22 = load i32*, i32** %4, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 2
  %25 = load i64, i64* %24, align 8
  %26 = trunc i64 %25 to i32
  %27 = call i32 @ngx_rtmp_mp4_field_16(i32* %22, i32 %26)
  %28 = load i32*, i32** %4, align 8
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = mul nsw i32 %31, 8
  %33 = call i32 @ngx_rtmp_mp4_field_16(i32* %28, i32 %32)
  %34 = load i32*, i32** %4, align 8
  %35 = call i32 @ngx_rtmp_mp4_field_32(i32* %34, i32 0)
  %36 = load i32*, i32** %4, align 8
  %37 = call i32 @ngx_rtmp_mp4_field_16(i32* %36, i32 1000)
  %38 = load i32*, i32** %4, align 8
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = trunc i64 %41 to i32
  %43 = call i32 @ngx_rtmp_mp4_field_16(i32* %38, i32 %42)
  %44 = load i32*, i32** %3, align 8
  %45 = load i32*, i32** %4, align 8
  %46 = call i32 @ngx_rtmp_mp4_write_esds(i32* %44, i32* %45)
  %47 = load i32*, i32** %4, align 8
  %48 = load i32*, i32** %5, align 8
  %49 = call i32 @ngx_rtmp_mp4_update_box_size(i32* %47, i32* %48)
  %50 = load i32, i32* @NGX_OK, align 4
  ret i32 %50
}

declare dso_local %struct.TYPE_3__* @ngx_rtmp_get_module_ctx(i32*, i32) #1

declare dso_local i32* @ngx_rtmp_mp4_start_box(i32*, i8*) #1

declare dso_local i32 @ngx_rtmp_mp4_field_32(i32*, i32) #1

declare dso_local i32 @ngx_rtmp_mp4_field_16(i32*, i32) #1

declare dso_local i32 @ngx_rtmp_mp4_write_esds(i32*, i32*) #1

declare dso_local i32 @ngx_rtmp_mp4_update_box_size(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
